# directxtk12test

./: .gitignore  CMakeLists.txt  DirectXTK_Tests_Desktop_2015.sln  DirectXTK_Tests_Desktop_2015_Win10.sln  DirectXTK_Tests_Desktop_2017_AgilitySDK.sln  DirectXTK_Tests_Desktop_2017_Win10.sln  DirectXTK_Tests_Desktop_2019_AgilitySDK.sln  DirectXTK_Tests_Desktop_2019_Win10.sln  DirectXTK_Tests_Desktop_2022_AgilitySDK.sln  DirectXTK_Tests_Desktop_2022_Win10.sln  DirectXTK_Tests_Windows10.sln  README.md  t.cmd
.github/: copilot-instructions.md
AnimTest/: AnimTest_Desktop_2017_Win10.vcxproj  AnimTest_Desktop_2017_Win10.vcxproj.filters  AnimTest_Desktop_2019_Win10.vcxproj  AnimTest_Desktop_2019_Win10.vcxproj.filters  AnimTest_Desktop_2022_Win10.vcxproj  AnimTest_Desktop_2022_Win10.vcxproj.filters  AnimTest_GDKX_2022.sln  AnimTest_GDKX_2022.vcxproj  AnimTest_GDKX_2022.vcxproj.filters  AnimTest_GDKX_2026.slnx  AnimTest_GDKX_2026.vcxproj  AnimTest_GDKX_2026.vcxproj.filters  AnimTest_GDK_2019.sln  AnimTest_GDK_2019.vcxproj  AnimTest_GDK_2019.vcxproj.filters  AnimTest_GXDK_2017.sln  AnimTest_GXDK_2017.vcxproj  AnimTest_GXDK_2017.vcxproj.filters  AnimTest_Windows10.vcxproj  AnimTest_Windows10.vcxproj.filters  AnimTest_XboxOneXDK_2017.sln  AnimTest_XboxOneXDK_2017.vcxproj  AnimTest_XboxOneXDK_2017.vcxproj.filters  Game.cpp  Game.h  Main.cpp  MicrosoftGame.Config  PackageUWP.appxmanifest  PackageXDK.appxmanifest  pch.h
ApiTest/: ApiTest.cpp  CMakeLists.txt  audio.cpp  bufferhelpers.cpp  commonstates.cpp  descriptorheap.cpp  directxhelpers.cpp  effects.cpp  graphicsmemory.cpp  loaderhelpers.cpp  model.cpp  postprocess.cpp  primitivebatch.cpp  primitives.cpp  shared.cpp  soundcmn.cpp  sprites.cpp  uploadbatch.cpp  vertextypes.cpp
Audio3DTest/: Audio3DTest_Desktop_2015_Win10.vcxproj  Audio3DTest_Desktop_2017_Win10.vcxproj  Audio3DTest_Desktop_2019_Win10.vcxproj  Audio3DTest_Desktop_2019_Win10.vcxproj.filters  Audio3DTest_Desktop_2022_Win10.vcxproj  Audio3DTest_GDKX_2022.sln  Audio3DTest_GDKX_2022.vcxproj  Audio3DTest_GDKX_2022.vcxproj.filters  Audio3DTest_GDKX_2026.slnx  Audio3DTest_GDKX_2026.vcxproj  Audio3DTest_GDKX_2026.vcxproj.filters  Audio3DTest_GDK_2019.sln  Audio3DTest_GDK_2019.vcxproj  Audio3DTest_GDK_2019.vcxproj.filters  Audio3DTest_GXDK_2017.sln  Audio3DTest_GXDK_2017.vcxproj  Audio3DTest_GXDK_2017.vcxproj.filters  Audio3DTest_Windows10.vcxproj  Audio3DTest_Windows10.vcxproj.filters  Audio3DTest_XboxOneXDK_2015.sln  Audio3DTest_XboxOneXDK_2015.vcxproj  Audio3DTest_XboxOneXDK_2017.sln  Audio3DTest_XboxOneXDK_2017.vcxproj  Audio3DTest_XboxOneXDK_2017.vcxproj.filters  Game.cpp  Game.h  MicrosoftGame.Config  PackageUWP.appxmanifest  PackageXDK.appxmanifest  pch.h
Common/: DeviceResourcesGDK.cpp  DeviceResourcesGDK.h  DeviceResourcesGXDK.cpp  DeviceResourcesGXDK.h  DeviceResourcesPC.cpp  DeviceResourcesPC.h  DeviceResourcesUWP.cpp  DeviceResourcesUWP.h  DeviceResourcesXDK.cpp  DeviceResourcesXDK.h  DirectXTKTest.h  FindMedia.h  MainGDK.cpp  MainGXDK.cpp  MainPC.cpp  MainUWP.cpp  MainXDK.cpp  RenderTexture.cpp  RenderTexture.h  TextConsole.cpp  TextConsole.h  d3dx12.h
D3D12Test/: D3D12Test_Desktop_2015_Win10.vcxproj  D3D12Test_Desktop_2015_Win10.vcxproj.filters  D3D12Test_Desktop_2017_AgilitySDK.vcxproj  D3D12Test_Desktop_2017_Win10.vcxproj  D3D12Test_Desktop_2017_Win10.vcxproj.filters  D3D12Test_Desktop_2019_AgilitySDK.vcxproj  D3D12Test_Desktop_2019_Win10.vcxproj  D3D12Test_Desktop_2019_Win10.vcxproj.filters  D3D12Test_Desktop_2022_AgilitySDK.vcxproj  D3D12Test_Desktop_2022_Win10.vcxproj  D3D12Test_GDKW_2022.sln  D3D12Test_GDKW_2022.vcxproj  D3D12Test_GDKW_2022.vcxproj.filters  D3D12Test_GDKX_2022.sln  D3D12Test_GDKX_2022.vcxproj  D3D12Test_GDKX_2022.vcxproj.filters  D3D12Test_GDKX_2026.slnx  D3D12Test_GDKX_2026.vcxproj  D3D12Test_GDK_2019.sln  D3D12Test_GDK_2019.vcxproj  D3D12Test_GDK_2019.vcxproj.filters  D3D12Test_GXDK_2017.sln  D3D12Test_GXDK_2017.vcxproj  D3D12Test_GXDK_2017.vcxproj.filters  D3D12Test_Windows10.vcxproj  D3D12Test_Windows10.vcxproj.filters  D3D12Test_XboxOneXDK_2015.sln  D3D12Test_XboxOneXDK_2015.vcxproj  D3D12Test_XboxOneXDK_2015.vcxproj.filters  D3D12Test_XboxOneXDK_2017.sln  D3D12Test_XboxOneXDK_2017.vcxproj  D3D12Test_XboxOneXDK_2017.vcxproj.filters  Game.cpp  Game.h  MicrosoftGame.Config  PackageUWP.appxmanifest  PackageXDK.appxmanifest  packages.config  pch.h
DdsWicTest/: CMakeLists.txt  DdsWicTest.cpp  dds.cpp  wic.cpp
EffectsTest/: EffectsTest_Desktop_2015.vcxproj  EffectsTest_Desktop_2015.vcxproj.filters  EffectsTest_Desktop_2015_Win10.vcxproj  EffectsTest_Desktop_2015_Win10.vcxproj.filters  EffectsTest_Desktop_2017_Win10.vcxproj  EffectsTest_Desktop_2017_Win10.vcxproj.filters  EffectsTest_Desktop_2019_Win10.vcxproj  EffectsTest_Desktop_2019_Win10.vcxproj.filters  EffectsTest_Desktop_2022_AgilitySDK.vcxproj  EffectsTest_Desktop_2022_AgilitySDK.vcxproj.filters  EffectsTest_Desktop_2022_Win10.vcxproj  EffectsTest_Desktop_2022_Win10.vcxproj.filters  EffectsTest_Desktop_XboxOneXDK_2015.sln  EffectsTest_Desktop_XboxOneXDK_2015.vcxproj.filters  EffectsTest_GDKX_2022.sln  EffectsTest_GDKX_2022.vcxproj  EffectsTest_GDKX_2022.vcxproj.filters  EffectsTest_GDKX_2026.vcxproj  EffectsTest_GDKX_2026.vcxproj.filters  EffectsTest_GDK_2019.sln  EffectsTest_GDK_2019.vcxproj  EffectsTest_GDK_2019.vcxproj.filters  EffectsTest_GDK_2026.slnx  EffectsTest_GXDK_2017.sln  EffectsTest_GXDK_2017.vcxproj  EffectsTest_GXDK_2017.vcxproj.filters  EffectsTest_Windows10.vcxproj  EffectsTest_XboxOneXDK_2015.sln  (+12 more)
HeaderTest/: CMakeLists.txt  CMakePresets.json  bufferhelperstest.cpp  commonstatestest.cpp  ddstextureloadertest.cpp  descriptorheaptest.cpp  directxhelperstest.cpp  effectpipelinestatedescriptiontest.cpp  effectstest.cpp  gamepadtest.cpp  geometricprimitivetest.cpp  graphicsmemorytest.cpp  keyboardtest.cpp  main.cpp  modeltest.cpp  mousetest.cpp  postprocesstest.cpp  primitivebatchtest.cpp  rendertargetstatetest.cpp  resourceuploadbatchtest.cpp  screengrabtest.cpp  simplemathtest.cpp  spritebatchtest.cpp  spritefonttest.cpp  vertextypestest.cpp  wictextureloadertest.cpp
(+566 files in other folders)
